--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,17 @@
 {
-    "name": "laravel-zero/laravel-zero",
-    "description": "The Laravel Zero Framework.",
-    "keywords": ["framework", "laravel", "laravel zero", "console", "cli"],
-    "homepage": "https://laravel-zero.com",
+    "name": "rvxlab/dotfan",
+    "description": "A dotfile manager",
+    "keywords": ["laravel", "laravel zero", "console", "cli", "dotfiles", "unix", "macos"],
     "type": "project",
-    "license": "MIT",
+    "license": "Apache-2.0",
     "support": {
         "issues": "https://github.com/laravel-zero/laravel-zero/issues",
         "source": "https://github.com/laravel-zero/laravel-zero"
     },
     "authors": [
         {
-            "name": "Nuno Maduro",
-            "email": "enunomaduro@gmail.com"
+            "name": "RVxLab",
+            "email": "code@rvx.works"
         }
     ],
     "require": {
