--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "laravel-zero/framework": "^12.0"
     },
     "require-dev": {
-        "laravel/pint": "^1.22",
+        "friendsofphp/php-cs-fixer": "^3.88",
         "mockery/mockery": "^1.6.12",
         "pestphp/pest": "^3.8.2"
     },
