--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,13 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.88",
+        "larastan/larastan": "^3.7",
         "mockery/mockery": "^1.6.12",
-        "pestphp/pest": "^4.0.0"
+        "pestphp/pest": "^4.0.0",
+        "phpstan/extension-installer": "^1.4",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-strict-rules": "^2.0",
+        "rector/rector": "^2.1"
     },
     "autoload": {
         "psr-4": {
@@ -40,7 +45,8 @@
         "sort-packages": true,
         "optimize-autoloader": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
         }
     },
     "minimum-stability": "stable",
