--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,17 @@
 {
     "name": "rvxlab/dotfan",
     "description": "A dotfile manager",
-    "keywords": ["laravel", "laravel zero", "console", "cli", "dotfiles", "unix", "macos"],
-    "type": "project",
     "license": "Apache-2.0",
-    "support": {
-        "issues": "https://github.com/laravel-zero/laravel-zero/issues",
-        "source": "https://github.com/laravel-zero/laravel-zero"
-    },
+    "type": "project",
+    "keywords": [
+        "laravel",
+        "laravel zero",
+        "console",
+        "cli",
+        "dotfiles",
+        "unix",
+        "macos"
+    ],
     "authors": [
         {
             "name": "RVxLab",
@@ -19,6 +23,7 @@
         "laravel-zero/framework": "^12.0"
     },
     "require-dev": {
+        "ergebnis/composer-normalize": "^2.48",
         "friendsofphp/php-cs-fixer": "^3.88",
         "larastan/larastan": "^3.7",
         "mockery/mockery": "^1.6.12",
@@ -28,6 +33,8 @@
         "phpstan/phpstan-strict-rules": "^2.0",
         "rector/rector": "^2.1"
     },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": {
             "App\\": "app/",
@@ -40,16 +47,17 @@
             "Tests\\": "tests/"
         }
     },
+    "bin": [
+        "dotfan"
+    ],
     "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true,
         "allow-plugins": {
+            "ergebnis/composer-normalize": true,
             "pestphp/pest-plugin": true,
             "phpstan/extension-installer": true
-        }
-    },
-    "minimum-stability": "stable",
-    "prefer-stable": true,
-    "bin": ["dotfan"]
+        },
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    }
 }
