--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "friendsofphp/php-cs-fixer": "^3.88",
         "larastan/larastan": "^3.7",
         "mockery/mockery": "^1.6.12",
-        "pestphp/pest": "^4.0.0",
+        "pestphp/pest": "^v3.8.4",
         "phpacker/phpacker": "^0.6.3",
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "^2.1",
