--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     ],
     "require": {
         "php": "^8.4",
-        "laravel-zero/framework": "^12.0"
+        "laravel-zero/framework": "^12.0",
+        "symfony/finder": "^7.3"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.48",
@@ -32,7 +33,8 @@
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan": "^2.1",
         "phpstan/phpstan-strict-rules": "^2.0",
-        "rector/rector": "^2.1"
+        "rector/rector": "^2.1",
+        "spatie/temporary-directory": "^2.3"
     },
     "minimum-stability": "stable",
     "prefer-stable": true,
